<resources>
    <string name="app_name">MySecretPlace</string>

    <string name="facebook_app_id">392275974439750</string>
    <string name="google_web_client_id">300640236489-tarcg2d19ljl0stntqkvo8bqff7dbh5a.apps.googleusercontent.com</string>

    <!--Login Form-->
    <string name="login_email_tv">이메일</string>
    <string name="login_passwd_tv">패스워드</string>
    <string name="sign_up_passwd_confirm_tv">패스워드 확인</string>
    <string name="login_email_etv">example@example.com</string>
    <string name="login_passwd_etv">패스워드를 입력해주세요</string>
    <string name="sign_up_passwd_confirm_etv">패스워드 확인</string>
    <string name="login_sign_up_btn">회원가입</string>
    <string name="login_sign_in_btn">로그인</string>
    <string name="login_search_email_btn">이메일 찾기</string>
    <string name="login_search_passwd_btn">패스워드 찾기</string>

    <string name="login_warning">이메일 또는 비밀번호를 정확히 입력해주세요.</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="nav_list_item_my_post">내 최근 글</string>
    <string name="nav_list_item_my_store">내 가게</string>
    <string name="nav_list_item_my_photo">내 사진</string>
    <string name="nav_list_item_my_drink">내 술</string>
    <string name="nav_list_item_my_food">내 음식</string>
    <string name="nav_list_item_my_info">내 정보</string>
    <string name="nav_list_item_settings">환경설정</string>

    <string name="view_my_info_user_name">이름</string>
    <string name="view_my_info_user_email">email</string>
    <string name="view_my_info_user_birth">생년월일</string>
    <string name="view_my_info_user_gender">성별</string>
    <string name="view_my_info_user_gender_m">남자</string>
    <string name="view_my_info_user_gender_w">여자</string>
    <string name="view_my_info_user_save">저장</string>
    <string name="view_my_info_user_edit">수정</string>

    <string name="view_drink_country_of_origin">원산지</string>
    <string name="view_drink_content">도수</string>
    <string name="view_drink_description">설명</string>

    <string name="view_food_price">가격</string>
    <string name="view_food_description">음식 설명</string>
    <string name="view_food_category">카테고리</string>

    <string name="alert_cancel_or_not">수정하신 데이터가 취소됩니다.</string>
    <string name="submit">확인</string>
    <string name="cancel">취소</string>

    <string name="view_store_service_wifi">Wifi</string>
    <string name="view_store_service_smoking">흡연</string>
    <string name="view_store_service_parking">주차</string>
    <string name="view_store_service_drink">술</string>
    <string name="view_store_service_code">전기코드</string>


</resources>

