<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/login_email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login_email_tv" />

    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_tv"
        android:hint="@string/login_email_etv"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/login_passwd_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/login_email_et"
        android:text="@string/login_passwd_tv" />

    <EditText
        android:id="@+id/login_passwd_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_passwd_tv"
        android:hint="@string/login_passwd_etv"

        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_passwd_et"
        android:layout_centerHorizontal="true"
        android:text="@string/login_sign_in_btn" />

    <Button
        android:id="@+id/login_sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_sign_in_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/login_sign_up_btn" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_sign_in_with_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_sign_up_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/com_facebook_loginview_log_in_button_long" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_sign_in_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_sign_in_with_facebook"
        android:layout_centerHorizontal="true" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/login_sign_in_with_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_sign_in_with_google"
        android:layout_centerHorizontal="true" />

</RelativeLayout>